// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`v2/components/DropdownMenu > disabled state > should render trigger with disabled attribute 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  class="activator"
  data-disabled=""
  data-state="closed"
  disabled=""
  id="reka-dropdown-menu-trigger-v-0"
  type="button"
>
  
  <svg
    aria-hidden="true"
    class="n8n-icon"
    data-icon="ellipsis"
    focusable="false"
    height="1em"
    role="img"
    viewBox="0 0 24 24"
    width="1em"
  >
    <g
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
    >
      <circle
        cx="12"
        cy="12"
        r="1"
      />
      <circle
        cx="19"
        cy="12"
        r="1"
      />
      <circle
        cx="5"
        cy="12"
        r="1"
      />
    </g>
  </svg>
  
</button>
`;

exports[`v2/components/DropdownMenu > rendering > should render default trigger button 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  class="activator"
  data-state="closed"
  id="reka-dropdown-menu-trigger-v-0"
  type="button"
>
  
  <svg
    aria-hidden="true"
    class="n8n-icon"
    data-icon="ellipsis"
    focusable="false"
    height="1em"
    role="img"
    viewBox="0 0 24 24"
    width="1em"
  >
    <g
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
    >
      <circle
        cx="12"
        cy="12"
        r="1"
      />
      <circle
        cx="19"
        cy="12"
        r="1"
      />
      <circle
        cx="5"
        cy="12"
        r="1"
      />
    </g>
  </svg>
  
</button>
`;

exports[`v2/components/DropdownMenu > rendering > should render with emoji activator 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  class="activator"
  data-state="closed"
  id="reka-dropdown-menu-trigger-v-0"
  type="button"
>
  
  <span
    class="activator-emoji"
  >
    🎉
  </span>
  
</button>
`;
